--- a/index.html
+++ b/index.html
@@ -3,16 +3,42 @@
     <head>  
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <tittle>Cadastro do Usuário</tittle>
 </head>
 </html>
     <header>
-        <h1>Usuário</h1>
+        <h1>Usuário da ONG</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="cadastro.html">Inicio</a></li>
-                <li><a href="projetos.html">Inicio</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
+                <li><a href="projetos.html">Projeto</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h2>Quem Somos</h2>
+            <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
+            <img src="imagens/cachorro.png" alt="Voluntários em ação">
+        </section>
+
+        <section>
+            <h2>Missão da ONG Amigão</h2>
+            <p>Promover dignidade de acolhimento aos animais abandonados</p>
+        </section>
+
+        <section>
+            <h2>Contato com a ONG Amigão</h2>
+            <address>
+                <p>Endereço: Rua passagem Bingo, 123 - Bairro Bela Vista - São Paulo/SP</p>
+                <p>Telefone: (11) 99999-9999</p>
+                <p>Email: contato@organizaçãoongamigao.org.br</p>
+            </address>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 ONG Amigão</p>
+    </footer>
+</body>
+</html>
